CI-81 chore: work in progress